# stitchsketch

./: .env.example  .gitignore  Dockerfile  README.md  config.db  diamonds.py  docker-compose.yml  photogrammetry_utility_outline.md  pyproject.toml  requirements.txt  run_services.py
designer/: diamonds.py
docs/: api_gateway.md  architecture.md  image_processing_service.md  reconstruction_service.md  ui_discovery.md  ui_service.md  upholstery_service.md  user_project_service.md  visualization_service.md
fe/: Dockerfile  app.py  config.db  config_manager.py  database.py  index.html  models.py  package-lock.json  package.json  pages.py  requirements.txt  vite.config.js
fe/src/: App.jsx  config.py  index.css  main.jsx  session.py  task_queue.py
fe/tests/: test_config.py  test_photogrammetry.py  test_session.py  test_task_queue.py
fe/ui/: components.py  state.py
postgres_data/: postmaster.pid
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/: api.requirements.txt  api_gateway.Dockerfile  api_gateway.py  init.sql  ui.Dockerfile  ui.py  visualization_service.py
src/auth/: configuration.yml
src/image_processing_service/: image_processing_service.py
src/keycloak/: keycloak-realm.json  keycloak-users.json  keycloak.Dockerfile
src/reconstruction_service/: reconstruction_service.py
src/ui/: Dockerfile  (+9 more)
stsk-3d-app/: Dockerfile  nginx.conf  package-lock.json
stsk-agents/: agents.py
stsk-app/: README.md  main.py
stsk-db/: Dockerfile
stsk-processor/: Dockerfile  README.md  requirements.txt
ui/: Dockerfile  package-lock.json
(+52 files in other folders)
