[tool.poetry]
name = "stitchsketch"
version = "0.1.0"
description = ""
authors = ["zbuhrer <zbuhrer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-restful = "*"
flask-cors = "*"
PyJWT = "*"
opencv-python = "*"
numpy = "*"
Pillow = "*"
open3d = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
